fix spacing.

--- a/style.less
+++ b/style.less
@@ -2,7 +2,7 @@
 	line-height: 20px;
 	text-align: center;
 	.txt-wrap{
-		margin: 8px;
+		margin: 8px 0 0;
 		opacity: .5;
 	}
 	.txt{
